# CheckPoint-Task

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
dlp/: Dockerfile  main.py  redis_connector.py  requirements.txt  settings.py
project/: Dockerfile  entrypoint.sh  pyproject.toml  run_server.py
project/api/: admin.py  handler.py  models.py  serializers.py  tests.py  urls.py  views.py
project/api/management/commands/: create_superuser.py
project/api/migrations/: 0001_initial.py  0002_flaggedmessage_client_msg_id.py  0003_flaggedmessage_is_checked.py  0004_alter_flaggedmessage_matched_pattern.py
project/project/: settings.py  urls.py
