[tool.poetry]
name = "checkpoint-task"
version = "0.1.0"
description = ""
authors = ["akshin-autods <agshin@autods.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
